--- a/index.html
+++ b/index.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-    </head>
+  <meta charset="UTF-8">
+  <title>Encuesta de Calidad de Servicio</title>
+</head>
 <body>
-
-<div class="container">
+  <div class="container">
     <h1>Encuesta de Calidad de Servicio</h1>
     <form id="encuestaForm">
-        <div class="pregunta">
-            <p><strong>P1. Limpieza del área</strong></p>
-            <div class="opciones">
-                <label><input type="radio" name="p1" value="1" required> 1</label>
-                </div>
-        </div>
-        <button type="submit">Enviar Respuestas</button>
+      <div class="pregunta">
+        <p><strong>P1. Limpieza del área</strong></p>
+        <label><input type="radio" name="p1" value="1" required> 1</label>
+        <label><input type="radio" name="p1" value="2"> 2</label>
+        <label><input type="radio" name="p1" value="3"> 3</label>
+        <label><input type="radio" name="p1" value="4"> 4</label>
+        <label><input type="radio" name="p1" value="5"> 5</label>
+      </div>
+      <button type="submit">Enviar Respuestas</button>
     </form>
     <div id="mensajeExito" style="display: none;">
-        <p>¡Gracias por tu respuesta!</p>
+      <p>¡Gracias por tu respuesta!</p>
     </div>
-</div>
+  </div>
 
-<script src="scripto.js"></script>
+  <script>
+    const form = document.getElementById("encuestaForm");
+    const mensajeExito = document.getElementById("mensajeExito");
+
+    form.addEventListener("submit", function(e) {
+      e.preventDefault();
+
+      const data = {
+        p1: document.querySelector('input[name="p1"]:checked')?.value
+      };
+
+      google.script.run
+        .withSuccessHandler(() => {
+          form.style.display = "none";
+          mensajeExito.style.display = "block";
+        })
+        .guardarRespuesta(data);
+    });
+  </script>
 </body>
 </html>
+
 
